<resources>
    <string name="app_name">ShareDream</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up"><u>아직 아이디가 없다면?</u></string>
    <string name="find_id"><u>아이디 찾기 </u></string>
    <string name="find_password"><u>비밀번호 찾기</u></string>
    <string name="serviceSub">본 약관은 주 바꿔드림(이하 회사 또는 바꿔드림)가 제공하는 서비스의 이용과 관련하여, 회사와 회원 간에 서비스 이용에 관한 권리 및 의무와 책임사항, 기타 필요한 사항을 규정하는 것을 목적으로 합니다.</string>
    <string name="service">1. 회사가 제공하는 모바일 및 PC 애플리케이션 온라인 콘텐츠 등록, 검색, 접근, 이용, 제공 서비스\n\n 2. 모바일 및 PC 어플리케이션 또는 PC의 웹브라우저 등을 이용하여 위 제1항 내지 제2항 기재 등에 접근하는 서비스\n\n 3. 기타 회사가 추가 개발하거나 다른 회사와의 제휴계약 등을 통해 회원에게 제공하는, 그리고 제공할 일체의 서비스\n\n 4. 모바일 어플에서 제공하는 물품 교환 및 대여 서비스</string>
    <string name="postingSub">1. 회사는 본 약관의 내용을 회원이 쉽게 알 수 있도록 홈페이지나 서비스 초기화면 또는 그 연결화면에 게시합니다.\n\n2. 회사는 관련법에 위배되지 않는 범위에서 본 약관을 변경할 수 있습니다.\n\n3. 회사가 본 약관을 개정할 경우에는 적용일자 및 개정내용, 개정사유 등을 명시하여 그 적용일자로부터 최소한 7일 이전(회원에게 불리하거나 중대한 사항의 변경은 30일 이전)부터 그 적용일자 경과 후 상당한 기간이 경과할 때까지 초기화면 또는 그 연결화면을 통해 공지합니다.\n\n4. 회사가 전항에 따라 개정된 약관을 공지 또는 통지하면서 회원에게 30일 기간 내에 의사표시를 하지 않으면 의사표시가 표명된 것으로 본다는 뜻을 명확하게 공지 또는 통지하였음에도 회원이 명시적으로 거부의 의사표시를 하지 아니한 경우 회원이 개정된 약관에 동의한 것으로 봅니다.\n\n5. 회원은 변경된 약관에 동의하지 않는 경우 회원 지위에서 탈퇴할 수 있습니다. 회원이 회사에 대하여 명시적으로 위와 같은 회원탈퇴 의사를 표시할 경우, 회사는 그 탈퇴한 회원을 상대로 변경된 약관의 적용을 받는 해당 서비스를 더 이상 제공할 수 없습니다.</string>
    <string name="adSub">1. 회사는 서비스 운영과 관련하여 회원정보, 고객이 입력한 정보를 활용하여 광고를 게재할 수 있습니다.\n\n2. 회원은 서비스 이용 시 노출되는 맞춤 광고 게재에 대해 동의합니다.\n\n3. 회사는 서비스상에 게재되어 있거나 서비스를 통한 광고주의 판촉활동에 회원이 참여하거나 교신 또는 거래를 함으로써 발생하는 손실과 손해에 대해 책임을 지지 않습니다.</string>
    <string name="personalAgreeSub">주 바꿔드림은 다음과 같이 개인정보를 수집 및 이용하고 있습니다</string>
    <string name="purpose_of_use">회원 가입, 서비스 제공, 이용자 식별, 부정이용 방지, 공지사항 전달\n - 항목: ID, 닉네임, 비밀번호, 이메일주소\n - 수집 및 이용 목적: 본인확인, 이용자 식별, 부정이용 방지, 중복가입 방지, 공지사항 전달\n - 항목: 이름, 생년월일, 성별, 내외국인정보, 이동통신사정보, 휴대전화번호, 연계정보(CI), 중복가입정보(DI)</string>
    <string name="Retention_period">회원탈퇴일로부터 30일 (법령에 특별한 규정이 있을 경우 관련 법령에 따라, 부정이용기록은 회원탈퇴일로부터 최대 5년)</string>
    <string name="periodAgree">동의를 거부할 권리가 있으나, 동의를 거부할 경우 회원가입이 불가능 합니다.\n 외부 계정을 이용하는 경우 이용자가 동의한 범위 내에서만 개인정보를 제공받고 처리합니다.\n 이벤트 등 프로모션 알림 전송을 위해 선택적으로 개인정보를 이용할 수 있습니다.\n그 외의 사항 및 자동 수집 정보와 관련된 사항은 개인정보처리방침을 따릅니다.</string>
    <string name="firebase_web_id">578483592134-hgs3jic2cj19u5k77k8pdstnh0t590ao.apps.googleusercontent.com</string>
    <string name="default_web_client_id" translatable="false">578483592134-b7bqscok3c67oieon96nh951lbcgjc02.apps.googleusercontent.com</string>

</resources>